# ecalc

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  resistor.cpp  resistor.h
.circleci/: config.yml
cmake/: Darwin.cmake  packaging.cmake
cmake/packaging/: macos.cmake
docker/: Dockerfile  debian_stretch.Dockerfile
resources/: icon.icns
